test/should-fail/jfxc4038test.visage
/*
* Regression test:  An exception has occurred in the Visage compiler
*
* @compilearg -sourcepath
* @compilearg test/should-fail
* @test/compile-error
*/
public class jfxc4038test {
var test:jfxc4038sub;
public function func() {
test.f;
1
}
}
